tests/baselines/reference/genericTypeReferencesRequireTypeArgs.errors.txt
==== tests/cases/compiler/genericTypeReferencesRequireTypeArgs.ts (4 errors) ====
    class C<T> {
       foo(): T { return null }
    }
    interface I<T> {
       bar(): T;
    }
    var c1: C; // error
            ~
!!! error TS2173: Generic type references must include all type arguments.
    var i1: I; // error
            ~
!!! error TS2173: Generic type references must include all type arguments.
    var c2: C<I>; // should be an error
              ~
!!! error TS2173: Generic type references must include all type arguments.
    var i2: I<C>; // should be an error
              ~
!!! error TS2173: Generic type references must include all type arguments.
    